2010-09-28  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-insert): Search backward for ",\n"
	for fields that are across several lines.

2010-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Remove url-http-file-exists-p, w32-focus-frame, and
	x-focus-frame.

	* nnimap.el (auth-source-forget-user-or-password)
	(auth-source-user-or-password): Autoload.

	* message.el (message-from-style, message-interactive)
	(message-cite-prefix-regexp, message-sendmail-envelope-from)
	(message-yank-prefix, message-indentation-spaces, message-signature)
	(message-signature-file): Add comment.

2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group-1): Set gnus-newsgroup-highest.
	(gnus-summary-insert-new-articles): Use gnus-newsgroup-highest to get
	new articles.

	* nnimap.el (nnimap-request-article): Don't partial-fetch single-part
	parts.
	(nnimap-request-article): Work with the t setting, too.

	* gnus-sum.el (gnus-summary-exit): Kill the article buffer later, so
	that you don't get flashes of other buffers.
	(gnus-summary-show-complete-article): Intern before setting.

2010-09-27  David Engster  <dengste@eml.cc>

	* nnmairix.el: (nnmairix-replace-group-and-numbers): Deal with NOV as
	well as HEADERS.
	(nnmairix-retrieve-headers): Provide new argument for the above.

2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-move-article): Don't alter
	gnus-newsgroup-active.  This makes `/ N' work after copying to the same
	group.

	* nnimap.el (nnimap-update-info): Don't destructively alter active.

	* message.el (message-cite-prefix-regexp): Revert my last edit.

	* gnus-sum.el (gnus-summary-show-complete-article): Bind the server
	variable instead of the Gnus variable.

	* nnimap.el (nnimap-find-wanted-parts-1): Use it.

	* gnus-art.el (gnus-fetch-partial-articles): Moved back to nnimap
	again.

	* nnimap.el (nnimap-request-accept-article): Remove the "." at the end,